# OOP_Laplacian_2D_solver

./: .travis.yml  README.md  add.sh  factorial.sh
hw02/: .gitignore  a.out  add.sh  b.out  factorial.sh  job.sh  job3.sh  job_cpp.sh  jobfile  pi.cpp  pi.sh  pi3.cpp  tri.sh
hw03/: .gitignore  Makefile  func.cpp  func.h  integrate  integrate.cpp  job.sh  plot.script  trapezoidal.h
hw03/integrate/: func.cpp  integrate.cpp  job.sh  plot.script  simpson.cpp  simpson.h  trapezoidal.cpp
hw03/make/: Makefile
hw04/: 4.tex  Makefile
proj01/: .gitignore  Makefile  Makefile.am  assemble.cpp  assemble.h  build_autotools.sh  configure.ac  main.cpp  solvers.cpp
proj01/src/: .gitignore  Makefile  Makefile.am  T_exact_assemble.cpp  contour_plotter.script  curve_1D_plotter.script  global_variables.h  main.cpp  matrix_assemble.cpp  matrix_assemble.h  mesh_size_change.sh  plot_convergence.script  print.cpp  print.h  q_assemble.cpp  q_assemble.h  solvers.cpp  solvers.h  surface_2D_plotter.script
proj01/tests/: .gitignore  Makefile.am  test.sh  tests
proj01/tex_report/: proj01.tex
proj02/: .gitignore  .travis.yml  Makefile.am  build_autotools.sh  configure.ac
proj02/src/: .gitignore  Dockerfile  Makefile.am  T_exact_assemble.cpp  T_exact_assemble.h  curve_1D_plotter.script  data.h5  global_variables.h  h5py_surface_plotter.py  main.cpp  matrix_assemble.h  mesh_size_change.sh  my_inputfile_parser.cpp  my_inputfile_parser.h  my_solver_class.cpp  my_solver_class.h  output_100x100.h5  plot_convergence.py  print.cpp  print.h  q_assemble.h  reference_sol_gauss_dim1_order2_n100.h5  reference_sol_gauss_dim1_order4_n100.h5  reference_sol_gauss_dim2_order2_n10.h5  reference_sol_gauss_dim2_order4_n10.h5  reference_sol_jacobi_dim1_order2_n100.h5  reference_sol_jacobi_dim2_order2_n10.h5  solvers.cpp  solvers.h  surface_2D_plotter.script
proj02/tests/: .gitignore  Makefile.am  test.sh
proj02/tex_report/: .gitignore  config.tex  proj02.tex
