C_PREREQ(2.65)
AC_INIT(grvy, 0.32.0, karl@oden.utexas.edu)
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADER(config_grvy.h)
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE
#------------------------------
# Checks for required programs                                                  #------------------------------
AC_PROG_CC
AC_PROG_CXX
AC_PROG_FC
AC_OUTPUT( Makefilesrc/Makefileexamples/Makefiletest/Makefilegrvy.pc\
grvy.specdoxygen/Makefilesrc/grvy.htest/F_version.F90 )
