AM_CXXFLAGS = $(GRVY_CFLAGS) $(MASA_CXXFLAGS) $(TACC_HDF5_CXXFLAGS)
LIBS = $(GRVY_LIBS) $(MASA_LIBS) $(TACC_HDF5_LIB)


#TESTS = tests
#check_PROGRAMS = tests
#tests_SOURCES = ../src/main.cpp ../src/matrix_assemble.cpp ../src/q_assemble.cpp ../src/solvers.cpp ../src/T_exact_assemble.cpp ../src/print.cpp ../src/global_variables.h

TESTS = test.sh
